# FirstOpenGLProject

./: CMakeLists.txt  GLUtils.cpp  GLUtils.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ScopeExit.h  Shader.cpp  Shader.h  Size2.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
resources/shaders/: Basic.shader
tests/: Test.h  TestClearColor.cpp  TestClearColor.h  TestMenu.cpp  TestMenu.h  TestTexture2D.cpp  TestTexture2D.h
